--- a/Finalboss096/Finalboss096/Finalboss096.csproj
+++ b/Finalboss096/Finalboss096/Finalboss096.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Finalboss096.cs" />
     <Compile Include="PlayersEvents.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Timing.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
